--- a/templates/resultado.html
+++ b/templates/resultado.html
@@ -404,7 +404,7 @@
 
 				<header>
 						<img src="/static/logo.png">
-						<h2>La APP que te renueva la ex</h2>
+						<h2>Tu cara me suenAPP</h2>
 			</header>
 			
 			<div class="content">
